Thu Apr 11 15:34:33 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSAttributedString.m ([GSMutableAttributedString
	-sanity]): Renamed to -_sanity, and changed so that we always
	compile this in so that regression testcases can use it.

2002-04-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Resources/GNUmakefile: install new language files.
	* Resources/Languages/Russion: language file added.
	* Resources/Languages/UkraineRussion: language file added.
	Added language files provided by Serg Stoyan <stoyan@on.com.ua>
	* Source/UnixFileHandle.m: Permit accept/connect on descriptors
	by default.
	* Source/WindowsFileHandle.m: ditto
	* Headers/Foundation/NSProcessInfo.h: Added MacOS-X operating system
	methods and enum
	* Source/NSProcessInfo.m: Added operating system methods and documented
	all methods for autogsdoc.

2002-04-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Tidy initialisers for case where the default
	C-string encoding is not usable internally.
	* Source/NSLog.m: Try default cString encoding.
	* Tools/cvtenc.m: Add -EscapeIn and -EscapeOut flags to handle \u
	escapes in files.
	* Resources/Languages/Italian: Correct to use \u escapes
	* Resources/Languages/French: ditto.
	* Resources/Languages/German: ditto.
	* Resources/Languages/README: New file to tell editors that they
	should use \u escapes ... and suggesting use of the cvtenc tool
	to make the job easy.

2002-04-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix error in unicode BOM handling
	Write plist unicode escapes using the conventional \u rather than \U,
	but read in either form.
	* Source/GSString.m: Fix error in length of unicode data produced.
	* Tools/cvtenc.m: Made easy to use and added instructions.

Sat Apr  6 02:42:43 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSUser.m (NSSearchPathForDirectoriesInDomains): Fixed
	typo, gnustep_local_root being used instead of gnustep_user_root
	for developer dirs in user root.
	